--- a/ConsoleAsk.cabal
+++ b/ConsoleAsk.cabal
@@ -34,7 +34,7 @@ library
   build-depends:
       base >=4.7 && <5
     , text ==2.1.2
-    , regex-posix ==0.96.0.2
+    , regex-tdfa ==1.3.2.4
   default-language: Haskell2010
   default-extensions: OverloadedStrings, LambdaCase, QuasiQuotes
 
