--- a/ConsoleAsk.cabal
+++ b/ConsoleAsk.cabal
@@ -35,6 +35,7 @@ library
       base >=4.7 && <5
     , text ==2.1.2
     , regex-tdfa ==1.3.2.4
+    , parsec ==3.1.18.0
   default-language: Haskell2010
   default-extensions: OverloadedStrings, LambdaCase, QuasiQuotes
 
