--- a/ConsoleAsk.cabal
+++ b/ConsoleAsk.cabal
@@ -33,8 +33,9 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
-    , text ==2.1.2
-    , regex-tdfa ==1.3.2.4
-    , parsec ==3.1.18.0
+    , text >=2 && <3
+    , regex-tdfa >=1.3 && <1.4
+    , parsec >=3.1 && <3.2
+    , lens >=5 && <6
   default-language: Haskell2010
   default-extensions: OverloadedStrings, LambdaCase, QuasiQuotes
