--- a/ConsoleAsk.cabal
+++ b/ConsoleAsk.cabal
@@ -3,11 +3,13 @@ cabal-version: 2.2
 name:           ConsoleAsk
 version:        0.1.0.0
 description:    Please see the README on GitHub at <https://github.com/t-sasaki915/ConsoleAsk#readme>
+synopsis:       Simple CLI user input library
 homepage:       https://github.com/t-sasaki915/ConsoleAsk#readme
 bug-reports:    https://github.com/t-sasaki915/ConsoleAsk/issues
 author:         Toma Sasaki
 maintainer:     netst915@gmail.com
 copyright:      2025 Toma Sasaki
+category:       System, Console
 license:        MIT
 license-file:   LICENSE
 build-type:     Simple
