--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -69,3 +69,6 @@
 # $ hlint --default > .hlint.yaml
 
 - arguments: [-XQuasiQuotes]
+
+- group: {name: future, enabled: true}
+- group: {name: generalise-for-conciseness, enabled: true}
